07-ECS-ECR.tf
# ECR REPOSITORY
resource "aws_ecr_repository" "ecr-repo" {
  name = "ecr-repo"  
}

# ECS CLUSTER
resource "aws_ecs_cluster" "ecs-cluster" {
  name = "clusterDev"  
}

# TASK DEFINITION
resource "aws_ecs_task_definition" "task" {
  family                    = "flaskApp"
  network_mode              = "awsvpc"
  requires_compatibilities  = [ "FARGATE" ]
  cpu                       = 256
  memory                    = 512
  execution_role_arn        = "${data.aws_iam_role.ecs-task.arn}"

  container_definitions = jsonencode([
    {
        name            = "flask-container"
        image           = "940401905947.dkr.ecr.us-east-1.amazonaws.com/ecr-repo:latest" #URI
        cpu             = 256
        memory          = 512       
        portMappings = [
        {
          containerPort = 5000
        }
      ]
    }
  ])
}

# ECS SERVICE
resource "aws_ecs_service" "svc" {
  name              = "Flask-Service"
  cluster           = "${aws_ecs_cluster.ecs-cluster.id}"
  task_definition   = "${aws_ecs_task_definition.task.id}"
  desired_count     = 2
  launch_type       = "FARGATE"

  
  network_configuration {
    subnets          = [ "${aws_subnet.pub-subnets[0].id}", "${aws_subnet.pub-subnets[1].id}" ]
    security_groups  = [ "${aws_security_group.sg1.id}" ]
    assign_public_ip = true
  }

  load_balancer {
    target_group_arn  = "${aws_lb_target_group.tg-group.arn}"
    container_name    = "flask-container"
    container_port    = "5000"
  }

  
}
